--- a/Servidor en Deno/Deno/index.html
+++ b/Servidor en Deno/Deno/index.html
@@ -5,6 +5,6 @@
   </head>
   <body style="background-color: black">
     <div id="app"></div>
-    <script type="module" src="./client.js"></script>
+    <script type="module" src="./server.ts"></script>
   </body>
 </html>
